# uvf-c

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  UVF_C_API_REPORT.md  analyze_manifest.py  build.md  convert_stl_to_uvf.py  index.html
.cursor/commands/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.github/workflows/: build-cli.yml  build-wasm.yml
docs/: DataArray_Enhancement_README.md  PROJECT_OVERVIEW.md  README.md  STRUCTURED_PARSER_REPORT.md
docs/api/: README.md
docs/development/: README.md
docs/examples/: README.md
docs/testing/: README.md
docs/wasm/: LOCAL_DEVELOPMENT.md
openspec/: AGENTS.md  project.md
openspec/specs/local-wasm-development/: spec.md
openspec/specs/stl-conversion/: spec.md
scripts/: bootstrap_wasm.sh  build_wasm.sh  dev-wasm.sh
src/: id_utils.cpp  id_utils.h  main.cpp  multi_file_parser.cpp  multi_file_parser.h  stl_parser.cpp  stl_parser.h  test_c_api.c  uvf_c_api.cpp  uvf_c_api.h  uvf_js_bindings.js  vtk_structured_parser.cpp  vtk_structured_parser.h  vtp_to_uvf.cpp  vtp_to_uvf.h
tests/: test_data_array_info.cpp  test_file_inputs.cpp  test_geom_kind.cpp
tests/data/: README.md  line_sample.vtp  slice_sample.vtp  surface_sample.vtk
